2007-06-24  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c (dfsch_compare_symbol): symbol-string comparison

	* lib/unix.c (dfsch_unix_register): unix syscall interface (some
	basic IO calls are missing for now) 

2007-06-14  Ales Hakl  <ales at hakl dot net>

	* dfsch/magic.h: added comment describing purpose, use and
	ugliness of this file

	* dfsch/lib/load.h, dfsch/parse.h, dfsch/hash.h, dfsch/number.h:
	added file description

	* dfsch/dfsch.h: removed redundant declaration of dfsch_env_get()

2007-03-06  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c (dfsch_exception_write): removed redundant ew_ctx_t

2007-02-26  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c (dfsch_eval_proc_impl): reset break flag _BEFORE_
	throwing exception

2007-02-24  Ales Hakl  <ales at hakl dot net>

	* scm/test.scm ("object subsystem"): basic tests of object subsystem

2007-02-20  Ales Hakl  <ales at hakl dot net>

	* lib/threads.c (dfsch_channel_create): use finalized
	synchronization primitives

2007-02-20  Ales Hakl  <ales at hakl dot net>

	* src/util.c (dfsch__create_finalized_mutex): finalized mutexes as
	sepparate objects (in order to break finalization cycles)

2007-01-27  Ales Hakl  <ales at hakl dot net>

	* src/object.c (dfsch__object_native_register): slot-set! should
	have bang in name.

2007-01-22  Ales Hakl  <ales at hakl dot net>

	* configure.ac (READLINE_LIBS): probably working support for
	versions without readline

	* TODO: removed object system from todo list

	* Makefile.am: install object.h

2007-01-20  Ales Hakl  <ales at hakl dot net>

	* src/object.c (class_write): correct buffer size
	(class_apply): We don't want send_tr here

	* dfsch/magic.h: exception handling in plain old C (ugly and so on)

	* src/dfsch.c (dfsch_exception_write): handle exceptions

	* src/object.c: object system

	* src/native.c (native_object_2_string): same signature as write
	method for wrappers

2007-01-16  Ales Hakl  <ales at hakl dot net>
